# sigmalang

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  02-SIGMALANG-INTERFACE-CONTRACTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  COMPLETE_OPTIMIZATION_SUMMARY.md  COMPLETE_PUBLISHING_SETUP_SUMMARY.md  COMPREHENSIVE_EXECUTIVE_SUMMARY.md  COMPRESSION_ANALYSIS.md  CONTRIBUTING.md  DASHBOARD_SETUP_GUIDE.md  DELIVERABLES_INVENTORY.md  Dockerfile  Dockerfile.prod  EXECUTIVE_SUMMARY_AND_ACTION_PLAN_v5.md  EXECUTIVE_SUMMARY_AND_MASTER_ACTION_PLAN.md  EXECUTIVE_SUMMARY_v3.md  EXECUTIVE_SUMMARY_v9.md  GITHUB_SECRETS_SETUP_INSTRUCTIONS.md  INTEGRATION.md  LICENSE  LOAD_TESTING_GUIDE.md  LOCAL_SETUP_GUIDE.md  MASTER_EXECUTIVE_SUMMARY_v6.md  Makefile  NEXT_STEPS_MASTER_ACTION_PLAN_v10.md  NEXT_STEPS_MASTER_ACTION_PLAN_v7.md  NEXT_STEPS_MASTER_ACTION_PLAN_v8.md  NEXT_STEPS_MASTER_ACTION_PLAN_v9.md  OPTIMIZATION_DELIVERABLES.md  OPTIMIZATION_SUMMARY.txt  PHASE2A1_BENCHMARK_RESULTS.md  PHASE2A1_EXECUTION_GUIDE.md  PHASE2A2_COMPLETION_SUMMARY.md  PHASE2A3_COMPLETION_SUMMARY.md  PHASE2A4_STATUS_REPORT.py  (+103 more)
.cowork/: WINDOWS_TRACKING.md
.github/: GITHUB_PROJECTS_SETUP.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: AEGIS.agent.md  APEX.agent.md  ARBITER.agent.md  ARCHITECT.agent.md  ATLAS.agent.md  AXIOM.agent.md  BRIDGE.agent.md  CANVAS.agent.md  CIPHER.agent.md  COMMUNICATOR.agent.md  CORE.agent.md  CRYPTO.agent.md  DIRECT_INTEGRATION_APPROACH.md  ECLIPSE.agent.md  FLUX.agent.md  FORGE.agent.md  FORTRESS.agent.md  GENESIS.agent.md  HELIX.agent.md  Integrate-TokenRecycling.ps1  LATTICE.agent.md  LEDGER.agent.md  LINGUA.agent.md  MENTOR.agent.md  MORPH.agent.md  NEURAL.agent.md  NEXUS.agent.md  OMNISCIENT.agent.md  ORACLE.agent.md  ORBIT.agent.md  PHANTOM.agent.md  PHOTON.agent.md  PRISM.agent.md  (+14 more)
.history/: DELIVERABLES_INVENTORY_20251211103854.md  DELIVERY_SUMMARY_20251211163756.md  EXECUTION_SUMMARY_20251211103803.md  PHASE2A1_BENCHMARK_RESULTS_20251211144153.md  PHASE2A1_COMPLETION_SUMMARY_20251211144223.md  PHASE2A1_EXECUTION_GUIDE_20251211111833.md  PHASE2A2_COMPLETION_SUMMARY_20251211145531.md  PHASE2A2_EXECUTION_GUIDE_20251211144922.md  PHASE2A3_COMPLETION_SUMMARY_20251211160524.md  PHASE2A3_EXECUTION_GUIDE_20251211151042.md  PHASE2A4_COMPLETION_SUMMARY_20251211163535.md  PHASE2A4_FINAL_REPORT_20251211165211.md  PHASE2A4_PLAN_20251211161709.md  PHASE2A4_PROGRESS_20251211162719.md  PHASE2A4_QUICK_REFERENCE_20251211163607.md  PHASE2A4_QUICK_REFERENCE_20251211163734.md  PHASE2A4_QUICK_REFERENCE_20251211165327.md  PHASE2A5_COMPLETION_SUMMARY_20251211190911.md  PHASE2A5_PLAN_20251211180850.md  PHASE2B_PLAN_20251211191044.md  pyproject_20251211103037.toml  pyproject_20251211103429.toml
agent-skills/: README.md  validate_skills.py
benchmarks/: benchmark_buffer_pool.py  benchmark_cache_hits.py  benchmark_iterative_vs_recursive.py  benchmark_phase4a2.py
core/: __init__.py  adaptive_compression.py  adaptive_encoder.py  api_models.py  cli.py  config.py  cross_modal_analogies.py  encoder.py  fast_encoder.py  parser.py  primitives.py  streaming_processor.py  transformer_embeddings.py  unified_pipeline.py
dashboard/: README.md  api_app.py  app.py  requirements.txt
docs/: MODEL_SELECTION_STRATEGY.md  PHASE1_FINDINGS.md  PHASE4_FEATURE_EXPANSION.md  dashboard.html  index.md
examples/: 01_basic_encoding.py  02_analogies.py  03_semantic_search.py  04_entity_extraction.py  05_cli_usage.py  06_api_client.py  07_batch_processing.py  08_advanced_analogies.py  README.md
helm/: Chart.yaml  README.md  values.yaml
integrations/: __init__.py  claude_mcp_server.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  redis.yaml  secret.yaml  service.yaml
prometheus/: prometheus-personal.yml  prometheus.yml
research/: HD_COMPUTING_RESEARCH.md
scripts/: BENCHMARK_REGRESSION_README.md  CHAOS_TEST_README.md  LOAD_TEST_README.md  auto_api_gateway.py  auto_commercial_launch.py  auto_fix_tests.py  auto_marketplace.py  auto_profile_fix.py  auto_sdk_gen.py  auto_security_fix.py  auto_status_update.py  auto_update.py  benchmark_regression.py  chaos_test.py  commit_msg_footer.py  compliance_check.py  context_analysis_prompts.md  deploy_staging.sh  dev_setup.sh  fix_unicode_docs.py  generate_docs.py  generate_openapi_spec.py  generate_sdks.py  github_setup.sh  health_monitor.py  load_full_context.py  load_test.sh  locustfile.py  manual_security_review.py  master_automation.py  phase1_validator.py  phase2_validation.py  profile_production.py  publish_docker.py  publish_pypi.py  run_full_test_suite.sh  security_scan.py  sigma_daemon.py  update_agents_sigmalang.py  validate_deployments.sh  (+2 more)
security_fixes/: SECURITY_COMPLIANCE_REPORT.md
sigmalang/: __init__.py  ryot_integration.py
tests/: MEMORY_PROFILING_GUIDE.py  __init__.py  baseline_statistical_analysis.py  benchmark_adaptive_compression.py  benchmarking_utils.py  chaos_testing.py  conftest.py  continuous_benchmarking.py  memory_analysis.py  run_memory_baseline.py  run_memory_quick_baseline.py  test_advanced_analogy_integration.py  test_advanced_analogy_patterns.py  test_analytics_engine.py  test_api_server.py  test_bidirectional_codec.py  test_cli.py  test_config.py  test_cross_modal_analogies.py  test_edge_debug.py  test_entity_relation_extraction.py  test_faiss_index.py  test_feature_expansion.py  test_federation.py  test_hd_vs_lsh_benchmark.py  test_hybrid_optimization.py  test_kv_quantization.py  test_memory_profiling.py  test_ml_models.py  test_monitoring.py  test_multilingual_support.py  test_optimizations.py  test_parallel_processor.py  test_pattern_evolution.py  test_pattern_intelligence.py  test_pattern_persistence.py  test_phase4a2.py  test_pipeline_debug.py  test_production_hardening.py  test_rate_limiter.py  (+13 more)
tools/: __init__.py  context_extender.py  knowledge_base_compressor.py  summarization_pipeline.py
training/: codebook.py  train.py
(+384 files in other folders)
