[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmalang"
version = "1.0.0"
description = "Sub-Linear Algorithmic Neural Glyph Language for LLM compression"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ryot LLM Project"}
]
keywords = ["llm", "compression", "semantic", "encoding", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    # Phase 2: ML/Pattern Intelligence
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    # Phase 3: API Server
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Phase 3: CLI & Monitoring
    "click>=8.1.0",
    "rich>=13.0.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.1.0",
    # Phase 3: Optional caching
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.70.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "httpx>=0.24.0",  # Phase 3: Async HTTP testing
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.70.0",
    "httpx>=0.24.0",  # Phase 3: Async HTTP testing
]

[project.scripts]
sigmalang = "sigmalang.ryot_integration:main"
sigmalang-train = "sigmalang.training.train:main"
sigmalang-server = "sigmalang.core.api_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sigmalang*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=sigmalang --cov-report=html --cov-report=term-missing --strict-markers"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "e2e: End-to-end tests for full pipeline",
    "performance: Performance and benchmarking tests",
    "round_trip: Encoder/decoder round-trip validation tests",
    "slow: Slow tests that should run separately",
]
