[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmalang"
version = "1.0.0"
description = "Sub-Linear Algorithmic Neural Glyph Language for LLM compression"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ryot LLM Project"}
]
keywords = ["llm", "compression", "semantic", "encoding", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    # Phase 2: ML/Pattern Intelligence
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    # Phase 3: API Server
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Phase 3: CLI & Monitoring
    "click>=8.1.0",
    "rich>=13.0.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.1.0",
    # Phase 3: Optional caching
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "hypothesis>=6.70.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "httpx>=0.24.0",  # Phase 3: Async HTTP testing
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "hypothesis>=6.70.0",
    "httpx>=0.24.0",  # Phase 3: Async HTTP testing
]

[project.scripts]
sigmalang = "sigmalang.core.cli:main"
sigmalang-train = "sigmalang.training.train:main"
sigmalang-server = "sigmalang.core.api_server:main"
sigmalang-legacy = "sigmalang.ryot_integration:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sigmalang*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Note: Coverage can now be enabled safely with timeout protection
addopts = "-v --tb=short --strict-markers --timeout=300"
timeout = 300
timeout_method = "thread"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "e2e: End-to-end tests for full pipeline",
    "performance: Performance and benchmarking tests",
    "round_trip: Encoder/decoder round-trip validation tests",
    "slow: Slow tests that should run separately (timeout=600)",
    "generated: Tests for generated code",
    "property: Property-based tests",
    "memory: Memory profiling tests",
    "benchmark: Benchmark/performance tests",
    "gpu: Tests requiring GPU hardware",
]
asyncio_mode = "strict"

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["sigmalang"]
omit = [
    "sigmalang/training/*",
    "sigmalang/ryot_integration.py",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Bandit Security Scanning
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "scripts", "benchmark_results"]
skips = ["B101"]  # Allow assert in non-test code (used for invariants)

# =============================================================================
# Ruff Linting
# =============================================================================
[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F401"]

# =============================================================================
# Black Formatting
# =============================================================================
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

# =============================================================================
# isort Import Sorting
# =============================================================================
[tool.isort]
profile = "black"
line_length = 120

# =============================================================================
# Mypy Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # too strict for existing codebase; tighten later
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
